--- a/src/assets/styles/components/header.css
+++ b/src/assets/styles/components/header.css
@@ -200,7 +200,7 @@
   background-color: var(--secondary-color);
 
   padding: 0.875rem 1.75rem;
-  border-radius: 150px;
+  border-radius: 9.375rem;
 }
 
 /* Sticky menu */
