--- a/src/assets/styles/components/modals.css
+++ b/src/assets/styles/components/modals.css
@@ -112,7 +112,7 @@
   width: 100%;
   padding: 1rem;
   border: 1px solid #ddd;
-  border-radius: 10px;
+  border-radius: 0.625rem;
 
   box-shadow: 0 -6px 36px 6px rgba(0, 0, 0, 0.05);
   z-index: 6;
@@ -198,12 +198,14 @@
   justify-content: center;
   align-items: stretch;
   column-gap: 1rem;
+
+  max-height: 82px;
 }
 
 .dish-card-img {
   max-width: 82px;
   width: 100%;
-  border-radius: 6px;
+  border-radius: 1rem;
   object-fit: contain;
 }
 
@@ -237,10 +239,10 @@
   align-items: center;
   column-gap: 1.125rem;
 
-  max-height: 29px;
-  padding: 6px 9px;
+  max-height: 1.875rem;
+  padding: 0.375rem 0.625rem;
   border: 1px solid #d4d4d4;
-  border-radius: 4px;
+  border-radius: 0.25rem;
 }
 
 .details .amount-counter {
@@ -252,6 +254,7 @@
 }
 
 /* Choose address form modal */
+
 .modal-change-address .modal-container {
   height: 439px;
 }
@@ -261,7 +264,7 @@
 
   max-width: 448px;
   width: 100%;
-  margin-top: 15px;
+  margin-top: 1rem;
 }
 
 .pickup-form,
@@ -295,6 +298,63 @@
 
 .modal-book-table .modal-wrapper {
   max-width: 400px;
+}
+
+/* Choose option modal */
+
+.modal-choose-option .modal-container {
+  row-gap: 1.5rem;
+
+  max-width: 440px;
+}
+
+.modal-choose-option .modal-container .close-icon {
+  top: 1.5rem;
+  right: 1.5rem;
+}
+
+.modal-choose-option .modal-wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.modal-choose-option .options-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-dish-card {
+  display: flex;
+  flex-direction: row;
+  column-gap: 1rem;
+}
+
+.modal-dish-card .dish-card-name {
+  max-width: 250px;
+}
+
+.modal-dish-card .dish-card-wrapper {
+  row-gap: 0.625rem;
+}
+
+.options-wrapper .dish-option {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+
+  padding: 0.75rem 0;
+  border-bottom: 1px solid #C9C9C9;
+}
+
+.dish-option:nth-last-child(-n + 1) {
+  border-bottom: none;
+}
+
+.modal-choose-option .amount-counter {
+  max-height: max-content;
 }
 
 @media (width <= 960px) {
@@ -386,6 +446,15 @@
 @media (width <= 622px) {
   .modal-container {
     max-width: 400px;
+  }
+}
+
+@media (width <= 575px) {
+  .modal-dish-card .dish-card-img {
+    max-width: 73px;
+  }
+  .modal-dish-card .dish-card-name {
+    max-width: 130px;
   }
 }
 
