--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -35,6 +35,7 @@
   gap: 1.75rem;
 
   max-height: 460px;
+  min-height: 460px;
 }
 
 .dish-text-content-wrapper {
@@ -206,7 +207,7 @@
   max-height: 600px;
   height: calc(100% - 100px);
   width: 100%;
-  margin: 0px 10px;
+  margin: 0 0.625rem;
 
   transform: translate(-50%, -50%);
   z-index: 9;
@@ -268,7 +269,7 @@
 
   background-color: transparent;
 
-  padding: 12px 0px 8px 0px;
+  padding: 0.75rem 0 0.5rem 0;
 }
 
 .instagram-storie-progress-item {
@@ -278,7 +279,7 @@
   background-color: #727272;
 
   height: 3px;
-  border-radius: 10px;
+  border-radius: 0.625rem;
 }
 
 .instagram-storie-progress-item-bar {
@@ -289,7 +290,7 @@
 }
 
 .instagram-storie-progress-item:not(:last-child) {
-  margin-right: 2px;
+  margin-right: 0.125rem;
 }
 
 .instagram-stories-btn-next,
@@ -303,7 +304,7 @@
 
   width: 53px;
   height: 50px;
-  padding: 0px;
+  padding: 0;
   border: none;
   border-radius: 5px;
   border-radius: 50%;
