--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -82,14 +82,39 @@
   height: 100%;
   margin-left: auto;
   margin-right: auto;
-  padding: 3.75rem 27rem 1.5rem 1.5rem;
+  padding: 3.75rem 1.5rem 1.5rem 1.5rem;
+}
+
+.stories-slider.shift-left {
+  animation: shiftLeft 0.5s forwards;
+}
+
+.stories-slider.shift-right {
+  animation: shiftRight 0.5s forwards;
+}
+
+@keyframes shiftLeft {
+  from {
+    padding-right: 1.5rem;
+  }
+  to {
+    padding-right: 27rem;
+  }  
+}
+
+@keyframes shiftRight {
+  from {
+    padding-right: 27rem;
+  }
+  to {
+    padding-right: 1.5rem;
+  }
 }
 
 .scroll {
   flex-grow: 1;
   overflow: auto;
 
-  max-width: 984px;
   width: 100%;
 }
 
@@ -109,7 +134,6 @@
   -webkit-overflow-scrolling: touch;
   column-gap: 4rem;
 
-  max-width: 984px;
   width: 100%;
 }
 
@@ -362,7 +386,15 @@
   max-width: 1440px;
   margin-left: auto;
   margin-right: auto;
-  padding: 1.5rem 27rem 1.5rem 1.5rem;
+  padding: 1.5rem 1.5rem 1.5rem 1.5rem;
+}
+
+.dishes-menu.shift-left {
+  animation: shiftLeft 0.5s forwards;
+}
+
+.dishes-menu.shift-right {
+  animation: shiftRight 0.5s forwards;
 }
 
 .dishes-menu-container {
@@ -370,7 +402,6 @@
   flex-direction: column;
   row-gap: 3.125rem;
 
-  max-width: 984px;
   width: 100%;
 }
 
