--- a/src/assets/styles/components/modals.css
+++ b/src/assets/styles/components/modals.css
@@ -119,7 +119,7 @@
   transition:
     bottom 0.3s ease,
     top 0.3s ease,
-    position 0.3s ease;
+    position 2s ease-in-out;
 }
 
 .cart.sticky {
